# noti

./: Cargo.toml  Makefile  PKGBUILD  PLAN.md  README.md  RELEASE.md
.github/workflows/: release.yml
resources/: io.github.L3-N0X.noti.desktop  io.github.L3-N0X.noti.metainfo.xml
src/: app.rs  autosave.rs  clipboard.rs  config.rs  document.rs  editor.rs  errors.rs  history_dialog.rs  main.rs  open_dialog.rs  palette.rs  recent_dialog.rs  recents.rs  snapshots.rs  state.rs  storage.rs  style.rs
